created hotfix branch and want to push to origin main

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <h2>i love coding</h2>
   <h1>Hello World, This is the develop branch</h1>
   <h2>Working on the feature branch now</h2>
+  <h3>i love tech</h3>
 </body>
 </html>
